--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -10,6 +10,8 @@ pyYAML
 tqdm
 ensure==1.0.2
 joblib
+types-PyYAML
+scipy
 -e .
 
 ## Dev requirements
@@ -18,3 +20,4 @@ tox==3.25.1
 black==22.8.0
 flake8==5.0.4
 mypy==0.971
+
